<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        tools:context=".ui.activity.ProductDetailActivity">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp">


            <ImageView
                android:id="@+id/productImage"                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:background="#EFEDED"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background" />

        </RelativeLayout>

        <TextView
            android:id="@+id/productName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_product"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/regular_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/price"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/installments"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/installments"
                android:textAlignment="textStart"
                android:textColor="@color/gray"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/actual_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="actual_price"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/sizes"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/size_linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:orientation="horizontal">
        </LinearLayout>
    </LinearLayout>
</ScrollView>